--- a/sign_up/websiteStyle.css
+++ b/sign_up/websiteStyle.css
@@ -7,6 +7,7 @@ body, html{
     overflow-x: hidden;
 }
 
+
 .video-background {
     position: absolute;
     top: 0;
@@ -31,13 +32,13 @@ main{
     display: flex;
     flex-direction: row;
     padding-bottom: 2vh;
-    padding-top: 4vh;
+    padding-top: 0vh;
     align-items: center;
     justify-content: center;
-    justify-items: center;
-
-    
+    justify-items: center;    
 }
+
+
 
 
 .leftSide{
@@ -63,6 +64,46 @@ main{
     margin-right: 5vw;
 }
 
+nav {
+    background: black;
+    padding: 10px 0;
+    margin-bottom: 2em;
+    font-size: 20px;
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    display: inline;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    position: relative;
+}
+
+a::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: white;
+    position: absolute;
+    bottom: -5px;
+    transition: width 0.3s ease;
+}
+
+a:hover::after {
+    width: 100%;
+}
 
 form{
     width: 100%;
@@ -83,6 +124,7 @@ form{
 form > p{
     text-align: center;
     font-size: 10px;
+    justify-content: space-between;
 }
 
 
@@ -138,32 +180,39 @@ input:focus:invalid {
 
 @media screen and (max-width: 800px){
     main{
-        flex-direction: column;
+        display: block;
         width: 90%;
         margin: auto;
-       
-        
+        position: unset;
+        z-index: unset;
+
     }.video-background{
         visibility: hidden;
+        height: 0px;
+        width: 0px;
     }
     .leftSide{
     visibility: hidden;
     height: 0px;
     width: 0px;
-    margin: 1em;
+    margin: unset;
     padding: 0px;
     }
+
     .rightSide{
     width: 100%;
     display:flex;
     flex-direction: column;
-    margin: 0 auto;
+    padding-bottom: 1em;
     }
     .graphics{
       width: 100%;
       margin: auto;
       padding: 0%;
       
+    }
+    form{
+        justify-content: space-between;
     }
 }
 
